[package]
name = "mini-explorer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bus = "2.2.3"
chrono = "0.4.19"
color-eyre = "0.5.11"
dotenv = "0.15.0"
futures = "0.3.19"
futures-util = "0.3.17"
iced = { version = "0.3.0", features = ["tokio"] }
iced_native = "0.4.0"
mongodb = "2.0.0"
num-format = "0.4.0"
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0.67"
structopt = "0.3.23"
tokio = { version = "1.11.0", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["default", "sync"] }
tokio-tungstenite = "0.16.1"
tracing = "0.1.26"
tracing-appender = "0.2.0"
tracing-subscriber = "0.3.3"
url = "2.2.2"
